// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigurationMap renders default 1`] = `
<div
  class="css-1fnaylc"
  data-cy="configurationMap"
>
  <dl
    class="css-1mqjlka"
    data-cy="configurationMapSection"
  >
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with actions 1`] = `
<div
  class="css-1fnaylc"
  data-cy="configurationMap"
>
  <dl
    class="css-1mqjlka"
    data-cy="configurationMapSection"
  >
    <div
      class="css-yae4lb"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-1vveheu"
          data-cy="secondaryButton"
          tabindex="0"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-yae4lb"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-1vveheu"
          data-cy="secondaryButton"
          tabindex="0"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
    <div
      class="css-yae4lb"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
      <span
        class="static_configurationMapRowAction css-48ylac"
        data-cy="configrationMapRowAction"
      >
        <button
          class="css-1vveheu"
          data-cy="secondaryButton"
          tabindex="0"
        >
          <span
            class=""
          >
            Action
          </span>
        </button>
      </span>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with default value 1`] = `
<div
  class="css-1fnaylc"
  data-cy="configurationMap"
>
  <dl
    class="css-1mqjlka"
    data-cy="configurationMapSection"
  >
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        —
      </dd>
    </div>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        —
      </dd>
    </div>
  </dl>
</div>
`;

exports[`ConfigurationMap renders with headline 1`] = `
<div
  class="css-1fnaylc"
  data-cy="configurationMap"
>
  <dl
    class="css-1mqjlka"
    data-cy="configurationMapSection"
  >
    <h1
      class="css-14una7e"
      data-cy="configurationMapHeading"
    >
      Jane Doe Info
    </h1>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Name
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        Jane Doe
      </dd>
    </div>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        Role
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        UX Designer
      </dd>
    </div>
    <div
      class="css-td53qz"
      data-cy="configurationMapRow"
    >
      <dt
        class="css-1bnt6tn"
        data-cy="configurationMapLabel"
      >
        City
      </dt>
      <dd
        class="css-1pld8at"
        data-cy="configurationMapValue"
      >
        San Francisco
      </dd>
    </div>
  </dl>
</div>
`;
